opam-version: "1.2"
maintainer: "Jochen Bartl <jochenbartl@mailbox.org>"
authors: [ "Jochen Bartl <jochenbartl@mailbox.org>" ]
license: "BSD2"
homepage: "https://github.com/verbosemode/syslog-message"
dev-repo: "https://github.com/verbosemode/syslog-message.git"
bug-reports: "https://github.com/verbosemode/syslog-message/issues"
doc: "https://verbosemode.github.io/syslog-message/doc"

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]

build-test: [
  [ "dune" "runtest" ]
]

depends: [
  "dune" {>= "1.1.0" & build}
  "astring"
  "ptime"
  "qcheck" {test}
]
available: [ ocaml-version >= "4.02.3" ]
