opam-version: "2.0"
maintainer: "Jochen Bartl <jochenbartl@mailbox.org>"
authors: [ "Jochen Bartl <jochenbartl@mailbox.org>" ]
homepage: "https://github.com/verbosemode/syslog-message"
doc: "https://verbosemode.github.io/syslog-message/doc"
dev-repo: "git+https://github.com/verbosemode/syslog-message.git"
bug-reports: "https://github.com/verbosemode/syslog-message/issues"
license: "BSD2"

depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {>= "1.1.0" & build}
  "astring"
  "ptime"
  "rresult"
  "qcheck" {with-test}
]

build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

synopsis: "Syslog message parser"
description: """
This is a library for parsing and generating [RFC3164](https://tools.ietf.org/html/rfc3164)
compatible Syslog messages.
"""
