opam-version: "2.0"
maintainer: "Jochen Bartl <jochenbartl@mailbox.org>"
authors: [ "Jochen Bartl <jochenbartl@mailbox.org>" ]
homepage: "https://github.com/verbosemode/syslog-message"
doc: "https://verbosemode.github.io/syslog-message/doc"
dev-repo: "git+https://github.com/verbosemode/syslog-message.git"
bug-reports: "https://github.com/verbosemode/syslog-message/issues"
license: "BSD-2-Clause"

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "astring"
  "ptime"
  "qcheck" {with-test}
]

build: [
  [ "dune" "subst" ] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]
conflicts: [ "result" {< "1.5"} ]

synopsis: "Syslog message parser"
description: """
This is a library for parsing and generating [RFC3164](https://tools.ietf.org/html/rfc3164)
compatible Syslog messages.
"""
